test/domains/bradc/slices/sliceAllDegenerate.good
sliceAllDegenerate.chpl:7: error: domain slice requires a range in at least one dimension
